[metadata]
name = malkit
version = attr: malkit.__version__
platforms = any
description = Malware analysis toolkit for machine learning
long_description = file: README.md
long_description_content_type = text/markdown
author = xymy
author_email = thyfan@163.com
maintainer = xymy
maintainer_email = thyfan@163.com
license = MIT
license_files = LICENSE
url = https://github.com/xymy/malkit
project_urls =
    Documentation = https://github.com/xymy/malkit
    Issue Tracker = https://github.com/xymy/malkit/issues
    Source Code = https://github.com/xymy/malkit
keywords = malware analysis, machine learning
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Security

[options]
packages = find:
package_dir =
    = src
include_package_data = True
zip_safe = False
python_requires = >=3.7
install_requires =
    joblib>=1.0
    numpy>=1.19
    pandas>=1.1
    pillow>=8.0

[options.extras_require]
dev =
    black>=21.10b
    isort>=5.9
    flake8>=4.0
    mypy>=0.910

[options.packages.find]
where = src
