[metadata]
name = malkit
version = attr: malkit.__version__
platforms = any
description = Malware analysis toolkit for machine learning
long_description = file: README.md
long_description_content_type = text/markdown
author = xymy
author_email = thyfan@163.com
maintainer = xymy
maintainer_email = thyfan@163.com
license = MIT
license_files = LICENSE
url = https://github.com/xymy/malkit
project_urls =
    Documentation = https://github.com/xymy/malkit
    Issue Tracker = https://github.com/xymy/malkit/issues
    Source Code = https://github.com/xymy/malkit
keywords = malware analysis, machine learning
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Security

[options]
packages = find:
package_dir =
    = src
include_package_data = True
zip_safe = True
python_requires = >=3.8
install_requires =
    joblib>=1.1
    numpy>=1.21
    pandas>=1.3
    pillow>=8.4

[options.extras_require]
dev =
    black>=22.3
    isort>=5.10
    flake8>=4.0
    mypy>=0.960

[options.packages.find]
where = src
